4 more tests in prepwork green for openjdk, added precedence for shift operators