@@ -53,14 +53,19 @@ public class TestAssignmentsExpression extends CommonTest {
     @DisplayName("multiple assignments in one statement")
     @Test
     public void test1() {
-        TypeInfo X = javaInspector.parse(INPUT1);
+        TypeInfo X = javaInspector.parse(ABX, INPUT1);
         MethodInfo method = X.findUniqueMethod("method", 3);
         PrepAnalyzer analyzer = new PrepAnalyzer(runtime);
         analyzer.doMethod(method);
         IfElseStatement if1 = (IfElseStatement) method.methodBody().statements().get(1);
-        VariableData vd100 = VariableDataImpl.of(if1.block().statements().get(0));
+        VariableData vd100 = VariableDataImpl.of(if1.block().statements().getFirst());
         VariableInfo viPos100 = vd100.variableInfo("pos");
         assertEquals("D:0, A:[0, 1.0.0, 1.0.0+0, 1.0.0+1, 1.0.0+2]", viPos100.assignments().toString());
+
+        assertEquals("pieces_bytes[pos++]=pieces_bytes[pos++]=pieces_bytes[pos++]=pieces_bytes[pos++]=(byte)255;",
+                if1.block().statements().getFirst().toString());
+        assertEquals("pieces_bytes[pos++]=(byte)(value>>24);",
+                if1.elseBlock().statements().getFirst().toString());
     }
 
 
@@ -81,7 +86,7 @@ public class TestAssignmentsExpression extends CommonTest {
     @DisplayName("multiple assignments in one statement, 2")
     @Test
     public void test2() {
-        TypeInfo X = javaInspector.parse(INPUT2);
+        TypeInfo X = javaInspector.parse(ABX, INPUT2);
         MethodInfo method = X.findUniqueMethod("method", 1);
         PrepAnalyzer analyzer = new PrepAnalyzer(runtime);
         analyzer.doMethod(method);
